# Machine-learning-project-of-heart-with-MLops

./: .gitignore  README.md  pyproject.toml
api/: main.py
app/: app.py
mlops/modules/: api_notebook.ipynb  download.py  main.py  train.py
mlops/modules/wandb/: latest-run
mlops/modules/wandb/run-20220530_192320-1sln35c2/: run-1sln35c2.wandb
mlops/modules/wandb/run-20220530_192320-1sln35c2/files/: config.yaml
mlops/modules/wandb/run-20220530_193812-12mpv0re/: run-12mpv0re.wandb
mlops/modules/wandb/run-20220530_193943-16nbn5ld/: run-16nbn5ld.wandb
mlops/modules/wandb/run-20220530_194010-ywleebio/: run-ywleebio.wandb
mlops/notebooks/: preprocessing.ipynb
modules/: preprocessing.py
notebooks/: EDA.ipynb  Train.ipynb  download.ipynb  model_export  preprocessing.py
notebooks/.ipynb_checkpoints/: Train-checkpoint.ipynb
source/api/: main.py  train.py
source/app/: app.py
source/artifacts/model_export:v1/: model_export
source/mlops/data/wandb/: latest-run
source/mlops/modules/: __init__.py  config.py  download.py  main.py  model_export  train.py
source/mlops/modules/wandb/: latest-run
source/mlops/notebooks/: Train.ipynb  api_notebook.ipynb  download.py  model_export
source/mlops/notebooks/wandb/: latest-run
source/notebooks/: Train.ipynb  download.ipynb  preprocessing.ipynb  train.py
source/notebooks/wandb/: latest-run
source/notebooks/wandb/run-20220602_192047-n6nmhkrq/: run-n6nmhkrq.wandb
source/notebooks/wandb/run-20220602_194750-2p05farq/: run-2p05farq.wandb
source/notebooks/wandb/run-20220602_211944-3ag3letr/: run-3ag3letr.wandb
(+62 files in other folders)
