[tool.poetry]
name = "Heart_disease"
version = "1"
description = "a machine learning pipeline to study heart disease"
authors = ["diego medeiros <diego25rn@gamil.com>"]
license = "public"

[tool.poetry.dependencies]
python = "3.10.2"
wandb = "^0.12.15"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
plotly = "^5.7.0"
streamlit = "^1.8.1"
pandas = "^1.4.2"
sklearn-pandas = "^2.2.0"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
streamlit-agraph = "^0.0.37"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
